Fix toolbar cutoff on Linux.

--- a/rss-ticker/chrome/skin/toolbar.css
+++ b/rss-ticker/chrome/skin/toolbar.css
@@ -1,7 +1,3 @@
-.rss-ticker-toolbar {
-	padding: 2px 0;
-}
-
 .rss-ticker-hidden-toolbar {
 	display: none !important;
 }
@@ -11,20 +7,17 @@
 	overflow: hidden;
 }
 
-#rss-ticker-toolbar-item toolbarbutton[image] {
-	min-height: 18px;
-	max-height: 18px;
+.rss-ticker-toolbar toolbarbutton[image] {
+	-moz-box-sizing: content-box;
+	min-height: 16px;
+	max-height: 2em;
 	border-width: 1px;
 	padding: 1px 2px;
 }
 
-#rss-ticker-toolbar-item toolbarbutton image {
+.rss-ticker-toolbar toolbarbutton image {
 	width: 16px;
 	height: 16px;
-}
-
-#rss-ticker-toolbar-item toolbarbutton label {
-	display: block !important;
 }
 
 #rss-ticker-tooltip {
